libs/modkit-canonical-errors/tests/ui/missing_quota_violation_on_resource_exhausted.rs
extern crate modkit_canonical_errors;

use modkit_canonical_errors::resource_error;

#[resource_error("gts.cf.core.users.user.v1~")]
struct UserResourceError;

fn main() {
    // resource_exhausted requires at least one .with_quota_violation() before .create()
    let _err = UserResourceError::resource_exhausted("Quota exceeded").create();
}
